# tgx

examples/CPU/buddhaOnCPU/: .include  CMakeLists.txt  GEMApplication.cpp  GEMApplication.h  Window.cpp  Window.h  buddha.h  buddhaOnCPU.cpp
src/: Fonts.h  Mesh3D.h
